--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">
+                        <a class="nav-link" href="#about">
                             <ion-icon style="margin-right: 5px" name="person"></ion-icon>About
                         </a>
                     </li>
