--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                                     <div class="collapse" id="collapse8">
                                         <div class="card card-body">
                                             <p style="text-align: left;">Designed and developed the website and ecommerce platform for a
-                                                startup called LocNes. This website is on standy and is ready to publish once
+                                                startup called LocNes. This website is on standby and is ready to publish once
                                                 further manufacturing progress is made</p>
                                             <p class="date">Mar 2019 - Jan 2020</p>
                                         </div>
