about text update

--- a/about.html
+++ b/about.html
@@ -177,19 +177,14 @@
               <div class="float-right page-caption">
                 <h1 id="ev2">Skills</h1>
                 <p>
-                  The languages I am most proficient in are C++, Python, and
-                  Javascript. I have experience developing websites, web
-                  applications, ... Mauris quis vulputate neque. Proin
-                  ullamcorper nisi libero. Praesent ac tincidunt est.
-                  Pellentesque convallis tincidunt felis, non dignissim sapien
-                  dignissim nec. Donec luctus ligula ligula, ut consectetur
-                  massa vulputate ac. Donec mattis feugiat iaculis. Fusce id leo
-                  at lectus ornare tempor. Suspendisse potenti. Praesent purus
-                  nisi, accumsan eu facilisis et, convallis et tellus. Quisque
-                  vestibulum lectus lectus, a aliquet ligula malesuada vel.
-                  Nullam vestibulum ut sapien consectetur luctus. Aenean augue
-                  lacus, sodales sit amet tincidunt vitae, facilisis in mi.
-                  Nulla facilisi.
+                  The languages I am most proficient in are C++, Python,
+                  Javascript, and Java. I have experience developing full-stack websites and web
+                  applications handling everything from the design process to the back-end infrastructure. The Simulation Game I built for the Chemistry department at UC Santa Barbara is an example of one of these web applications.
+                  </br></br>
+                  I also have experience with Python in developing Machine learning models without the assistance of libraries such as scikit-learn as well as creating scripts to automate workflow.
+                  Researchers in the Ocean Recoveries Lab at UC Santa Barbara needed to measure the growth of coral reefs through converting
+                  their photos taken in the field to correctly scaled 3d models. This process required over 10 steps for every model and researchers had to be on standby to do the next step after model rendering had completed. 
+                  I created to python scripts that automated this process for all models at once so only 1 manual step was required in total saving the researchers lots of valuable time.
                 </p>
               </div>
             </div>
