--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">
+                        <a class="nav-link" href="about.html">
                             <ion-icon style="margin-right: 5px" name="person"></ion-icon>About
                         </a>
                     </li>
@@ -306,12 +306,19 @@
                                     </button>
                                     <div class="collapse" id="collapse6">
                                         <div class="card card-body">
-                                            <p style="text-align: left;">Created scripts to assist researchers at the Ocean Recoveries Lab
+                                            <p style="text-align: left;">
+                                                Created scripts to assist researchers at the Ocean Recoveries Lab
                                                 at UC
                                                 Santa Barbara, which focuses on preserving and recovering ocean
                                                 ecosystems.
                                                 These scripts automate the mathematical modeling of their collected
-                                                data to their specific requirements.</p>
+                                                data to their specific requirements.
+                                                </br></br>
+                                                The process of automating workflows and saving people time through software is very enjoyable for me. 
+                                                The researchers use a program called MetaShape in order to convert photos they have taken of coral into 3d models that they can use to measure the growth and health of coral reefs.
+                                                This process must be done for numerous models which require over 10 steps for each model. Some of these steps can't be done until previous rendering is complete which takes several hours so these researchers will have to be on standby to
+                                                manually use the computer and continue to the next step after rendering is done. The two programs I created for them automate this process for all models at once. The researchers are only required to do 1 manual step in total for all models to be complete, saving them valuable time.
+                                            </p>
                                             <p class="date">Jan 2020 - Mar 2020</p>
                                         </div>
                                         <button
