--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
                         </div>
 
                         <div class="row page-caption justify-content-center align-self-center row-eq-height c2">
-                            <div class="container" style="width:80%">
+                            <div class="container">
                                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                                     <div data-aos="zoom-in" data-aos-duration="1000">
                                         <h3 id="ev2">Skills</h1>
