--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width ">
                                             <img src="css/images/rock-n-roll.jpg"
-                                                class="mbr-figure__img rounded img-fluid" alt="Card 1" title="Card 1">
+                                                class="mbr-figure__img rounded img-fluid" alt="Card 1" title="Gomoku AI">
                                         </figure>
                                     </div>
                                     <h3 class="styled">Gomoku AI</h3>
@@ -148,7 +148,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width ">
                                             <img src="css/images/joel-staveley.jpg"
-                                                class="mbr-figure__img rounded img-fluid" alt="Card 1" title="Card 1">
+                                                class="mbr-figure__img rounded img-fluid" alt="Card 2" title="Diabetic Retinopothy Predictor">
                                         </figure>
                                     </div>
                                     <h3 class="styled">Diabetic Retinopothy</h3>
@@ -196,7 +196,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
                                             <img src="css/images/silhouette.jpg" class="mbr-figure__img rounded img-fluid"
-                                                alt="Card 2" title="Card 2">
+                                                alt="Card 3" title="Author Predictor">
                                         </figure>
                                     </div>
                                     <h3 class="">Author Predictor</h3>
@@ -228,7 +228,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
                                             <img src="css/images/helena-lopes.jpg" class="mbr-figure__img rounded img-fluid"
-                                                alt="Card 2" title="Card 2">
+                                                alt="Card 4" title="Sentiment Analysis">
                                         </figure>
                                     </div>
                                     <h3 class="">Sentiment Analysis</h3>
@@ -258,7 +258,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
                                             <img src="css/images/linearclassifier.png" class="mbr-figure__img rounded img-fluid"
-                                                alt="Card 2" title="Card 2">
+                                                alt="Card 5" title="Linear Classifier">
                                         </figure>
                                     </div>
                                     <h3 class="">3-Class Linear Classifier</h3>
@@ -293,7 +293,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width ">
                                             <img src="css/images/oceanrecovery.JPG"
-                                                class="mbr-figure__img rounded img-fluid" alt="Card 1" title="Card 1">
+                                                class="mbr-figure__img rounded img-fluid" alt="Card 6" title="Ocean Recovery Lab">
                                         </figure>
                                     </div>
                                     <h3 class="styled">Ocean Recovery Lab</h3>
@@ -336,7 +336,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
                                             <img src="css/images/HappyCow.png" class="mbr-figure__img rounded img-fluid"
-                                                alt="Card 2" title="Card 2">
+                                                alt="Card 7" title="Happy Cows">
                                         </figure>
                                     </div>
                                     <h3 class="">Simulation Game</h3>
@@ -387,7 +387,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width ">
                                             <img src="css/images/DrinkLocCar.png"
-                                                class="mbr-figure__img rounded img-fluid" alt="Card 3" title="Card 3">
+                                                class="mbr-figure__img rounded img-fluid" alt="Card 8" title="LocNes">
                                         </figure>
                                     </div>
                                     <h3 class="styled">Locnes </h3>
@@ -420,7 +420,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
                                             <img src="css/images/walterreed.png"
-                                                class="mbr-figure__img rounded img-fluid" alt="Card 2" title="Card 2">
+                                                class="mbr-figure__img rounded img-fluid" alt="Card 9" title="Walter Reed Medical Center">
                                         </figure>
                                     </div>
                                     <h3 class="">Walter Reed National Military Medical Center</h3>
@@ -451,7 +451,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
                                             <img src="css/images/java3.jpg" class="mbr-figure__img rounded img-fluid"
-                                                alt="Card 2" title="Card 2">
+                                                alt="Card 10" title="Bank Interface">
                                         </figure>
                                     </div>
                                     <h3 class="">Bank Database & ATM Interface</h3>
@@ -483,7 +483,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
                                             <img src="css/images/React_Native_Logo.png"
-                                                class="mbr-figure__img rounded img-fluid" alt="Card 2" title="Card 2">
+                                                class="mbr-figure__img rounded img-fluid" alt="Card 11" title="Rideshare">
                                         </figure>
                                     </div>
                                     <h3 class="">College Rideshare</h3>
@@ -512,7 +512,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
                                             <img src="css/images/linux.jpg" class="mbr-figure__img rounded img-fluid"
-                                                alt="Card 2" title="Card 2">
+                                                alt="Card 12" title="Linux OS">
                                         </figure>
                                     </div>
                                     <h3 class="">Operating System</h3>
@@ -539,7 +539,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
                                             <img src="css/images/cr10.jpg" class="mbr-figure__img rounded img-fluid"
-                                                alt="Card 2" title="Card 2">
+                                                alt="Card 13" title="3D Printer">
                                         </figure>
                                     </div>
                                     <h3 class="">3D Printers & CAD</h3>
@@ -569,7 +569,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
                                             <img class="img-fluid" src="css/images/quadcopterFinal.jpg"
-                                                class="mbr-figure__img rounded" alt="Card 2" title="Card 2">
+                                                class="mbr-figure__img rounded" alt="Card 14" title="Quadcopter">
                                         </figure>
                                     </div>
                                     <h3 class="">Quadcopter</h3>
@@ -598,7 +598,7 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
                                             <img class="img-fluid" src="css/images/miningRig.jpg"
-                                                class="mbr-figure__img rounded" alt="Card 2" title="Card 2">
+                                                class="mbr-figure__img rounded" alt="Card 15" title="Mining Rig">
                                         </figure>
                                     </div>
                                     <h3 class="">Ethereum "Mining Rig" Computer</h3>
