--- a/about.html
+++ b/about.html
@@ -103,27 +103,26 @@
                     </div>
                     <div class="mt-5 container">
                         <div class="row justify-content-center align-self-center row-eq-height">
-                            <div class="col-xl-6 col-lg-6 col-md-5 col-sm-12 col-12">
+                            <div class="col-xl-6 col-lg-6 col-md-5 col-sm-12 col-12 my-auto">
                                 <div data-aos="zoom-in" data-aos-duration="1000">
-                                    <div class="float-left">
-                                        <h3 class="" id="ev1">Interests</h1>
-                                            <p>
-                                                Hi! My name is Matt, I recently graduated from
-                                                University of California, Santa Barbara in June 2020 and
-                                                received a B.S in Computer Science. I love exploring new
-                                                technology and witnessing the merge between science fiction
-                                                and reality. This is what has intrigued my interest in
-                                                exploring areas such as machine learning, decentralized
-                                                applications, 3d-printing, and quadcopters. I am very
-                                                fortunate to enter a field that I feel so passionate about and
-                                                am eager to continue developing my skills and gaining
-                                                experience within the world of software.
-                                            </p>
-                                    </div>
+
+                                    <h3 id="ev1">Interests</h1>
+                                        <p>
+                                            Hi! My name is Matt, I recently graduated from
+                                            University of California, Santa Barbara in June 2020 and
+                                            received a B.S in Computer Science. I love exploring new
+                                            technology and witnessing the merge between science fiction
+                                            and reality. This is what has intrigued my interest in
+                                            exploring areas such as machine learning, decentralized
+                                            applications, 3d-printing, and quadcopters. I am very
+                                            fortunate to enter a field that I feel so passionate about and
+                                            am eager to continue developing my skills and gaining
+                                            experience within the world of software.
+                                        </p>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-7 col-sm-12 col-12">
-                                <div data-aos="flip-right" data-aos-duration="3000">
+                                <div data-aos="fade-right" data-aos-duration="1000">
                                     <div class="image text-center center-block">
                                         <img src="css/images/GradPhoto.jpg" style="max-height: 500px; width: auto"
                                             class="rounded img-fluid" alt="Grad" title="Grad">
@@ -134,58 +133,60 @@
 
                         <div class="row aboutpadding justify-content-center align-self-center row-eq-height">
                             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
-                                <div data-aos="flip-left" data-aos-duration="3000">
+                                <div data-aos="fade-left" data-aos-duration="1000">
                                     <div class="image center-block">
-                                        <img src="css/images/code.jpg" class="rounded img-fluid center-block" alt="Yosemite"
-                                            title="Yosemite">
+                                        <img src="css/images/code.jpg" class="rounded img-fluid center-block"
+                                            alt="Yosemite" title="Yosemite">
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 my-auto">
                                 <div data-aos="zoom-in" data-aos-duration="1000">
-                                    <h3 id="ev2">Skills</h1>
-                                        <p>
-                                            The languages I am most proficient in are C++, Python,
-                                            Javascript, and Java. I have experience developing full-stack websites
-                                            and web
-                                            applications handling everything from the design process to the back-end
-                                            infrastructure. The Simulation Game I built for the Chemistry department
-                                            at UC Santa Barbara is an example of one of these web applications.
-                                            </br></br>
-                                            I also have experience with Python in developing Machine learning models
-                                            without the assistance of libraries such as scikit-learn as well as
-                                            creating scripts to automate workflow.
-                                            Researchers in the Ocean Recoveries Lab at UC Santa Barbara needed to
-                                            measure the growth of coral reefs through converting
-                                            their photos taken in the field to correctly scaled 3d models. This
-                                            process required over 10 steps for every model and researchers had to be
-                                            on standby to do the next step after model rendering had completed.
-                                            I created two python scripts that automated this process for all models
-                                            at once so only 1 manual step was required in total saving the
-                                            researchers valuable time.
-                                        </p>
+
+                                    <h3 id="ev2">Skills</h3>
+                                    <p>
+                                        The languages I am most proficient in are C++, Python,
+                                        Javascript, and Java. I have experience developing full-stack websites
+                                        and web
+                                        applications handling everything from the design process to the back-end
+                                        infrastructure. The Simulation Game I built for the Chemistry department
+                                        at UC Santa Barbara is an example of one of these web applications.
+                                        </br></br>
+                                        I also have experience with Python in developing Machine learning models
+                                        without the assistance of libraries such as scikit-learn as well as
+                                        creating scripts to automate workflow.
+                                        Researchers in the Ocean Recoveries Lab at UC Santa Barbara needed to
+                                        measure the growth of coral reefs through converting
+                                        their photos taken in the field to correctly scaled 3d models. This
+                                        process required over 10 steps for every model and researchers had to be
+                                        on standby to do the next step after model rendering had completed.
+                                        I created two python scripts that automated this process for all models
+                                        at once so only 1 manual step was required in total saving the
+                                        researchers valuable time.
+                                    </p>
                                 </div>
+
                             </div>
                         </div>
 
                         <div class="row aboutpadding justify-content-center align-self-center row-eq-height c2">
-                            
-                            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+
+                            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 my-auto">
                                 <div data-aos="zoom-in" data-aos-duration="1000">
-                                    <div class="float-left">
-                                        <h3 id="ev3">Other</h1>
-                                            <p>
-                                                I like to balance my passion for technology with a healthy
-                                                amount of the outdoors and nature. I currently live in Santa
-                                                Barbara, California which has a surplus of outdoor activities
-                                                and beautiful scenery. I enjoy going on hikes and exploring
-                                                the beauty of national parks whenever I can.
-                                            </p>
-                                    </div>
+
+                                    <h3 id="ev3">Other</h1>
+                                        <p>
+                                            I like to balance my passion for technology with a healthy
+                                            amount of the outdoors and nature. I currently live in Santa
+                                            Barbara, California which has a surplus of outdoor activities
+                                            and beautiful scenery. I enjoy going on hikes and exploring
+                                            the beauty of national parks whenever I can.
+                                        </p>
                                 </div>
+
                             </div>
                             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
-                                <div data-aos="flip-right" data-aos-duration="3000">
+                                <div data-aos="fade-right" data-aos-duration="1000">
                                     <div class="image center-block">
                                         <img src="css/images/Yosemite.JPG" class="rounded img-fluid" alt="Yosemite"
                                             title="Yosemite">
@@ -198,6 +199,7 @@
 
 
                 <div class="p-3 mb-5 mt-5 rounded">
+                    <div data-aos="fade-up" data-aos-duration="2000">
                     <div class="container aboutpadding section-title mb-2 text-center" id="contact">
                         <h3>Contact Me</h3>
                         <div class="row">
@@ -216,6 +218,7 @@
                                 <ion-icon style="margin-right: 5px" name="hammer"></ion-icon>
                             </button>
                         </a>
+                    </div>
                     </div>
                 </div>
 
