about me update

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                             <h1 class="page-title">Hi! Welcome to my portfolio</h1>
                         </div>
                         <div data-aos="fade-up" data-aos-duration="2500" data-aos-easing="ease-in-out">
-                            <h4 class="lead page-title">This page is still under construction
+                            <h4 class="lead page-title">This website was created to showcase my projects and experience
                             </h4>
                         </div>
 
