--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
                                         </p>
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-7 col-sm-12 col-12">
+                            <div class="col-xl-6 col-lg-6 col-md-7 col-sm-12 col-12 my-auto">
                                 <div data-aos="fade-right" data-aos-duration="1000">
                                     <div class="image text-center center-block">
                                         <img src="css/images/GradPhoto.jpg" style="max-height: 500px; width: auto"
@@ -140,7 +140,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 my-auto">
                                 <div data-aos="zoom-in" data-aos-duration="1000">
                                     <h3 id="ev2">Skills</h3>
                                     <p>
@@ -184,7 +184,7 @@
                                 </div>
 
                             </div>
-                            <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
+                            <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 my-auto">
                                 <div data-aos="fade-right" data-aos-duration="1000">
                                     <div class="image center-block">
                                         <img src="css/images/Yosemite.JPG" class="rounded img-fluid" alt="Yosemite"
