--- a/about.html
+++ b/about.html
@@ -144,9 +144,8 @@
                                 <div data-aos="zoom-in" data-aos-duration="1000">
                                     <h3 id="ev2">Skills</h3>
                                     <p>
-                                        The languages I am most proficient in are C++, Python,
-                                        Javascript, and Java. I have experience developing full-stack websites
-                                        and web
+                                        The languages I am most proficient in are C++ and Python, followed by Javascript and Java. 
+                                        I have experience developing full-stack websites and web
                                         applications handling everything from the design process to the back-end
                                         infrastructure. The Simulation Game I built for the Chemistry department
                                         at UC Santa Barbara is an example of one of these web applications.
